Updating the install scripts and some configuration to help simplify the installation process